--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 data/2020_10K_item1_full.csv
 data/major_groups.csv
 data/public_firms.csv
+BAIT508 Group Project - Public Firm Analysis (v3.0).docx
