updated save path

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 data/2020_10K_item1_full.csv
 data/major_groups.csv
 data/public_firms.csv
+code/Class_Project_10022023.ipynb
+code/Class_Project_10032023.ipynb
 BAIT508 Group Project - Public Firm Analysis (v3.0).docx
